TM-17400 - Fixed Alignment issue on Post-login notice

--- a/src/main/webapp/tds/web-app/css/page/module/noticeManager/standard-notices.component.scss
+++ b/src/main/webapp/tds/web-app/css/page/module/noticeManager/standard-notices.component.scss
@@ -4,6 +4,11 @@
      max-height: none !important;
    }
 
+   .aligned-checkbox {
+     top: -10px;
+     margin-right: 5px;
+   }
+
    .notices-container {
      height: 500px;
    }
